# chromium-vita

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
docs/: mbedtls.md
sce_sys/livearea/contents/: template.xml
scripts/: gen_assets.py
src/: main.cpp
src/browser/: http_client.cpp  http_client.h  http_client_mbedtls.cpp  session.cpp  session.h  url_utils.cpp  url_utils.h
src/platform/vita/: display.cpp  display.h  ime.cpp  ime.h  input.cpp  input.h  mbedtls_port.c  mbedtls_user_config.h  netsurf_frontend.cpp  netsurf_frontend.h  tf_psa_user_config.h
src/ui/: shell.cpp  shell.h
tests/: test_gen_assets.py
